<resources>
    <string name="app_name">Github User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company :</string>
    <string name="user_name">Username :</string>
    <string name="followers">Followers</string>
    <string name="number">100</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="about_name">Ganu Frindi Vyandana</string>
    <string name="about_email">ganufvyandana@gmail.com</string>
    <string name="about_github">https://github.com/Xalam</string>
    <string name="detail">Detail</string>
    <string name="detail_username">Username</string>
    <string name="detail_location">Location</string>
    <string name="detail_company">Company</string>
</resources>
