<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="6dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/colorPurple"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ci_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:src="@color/colorPurple" />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/full_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fullname"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_light"
                android:text="@string/user_name"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_light"
                android:text="@string/company"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_title"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:text="@string/company"
                android:textSize="15sp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>